--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 .top-third {
 	margin: 0;
-	height: 20%;
+	height: 22%;
 	width: 100%;
 	display: flex;
 	border: 1px solid black;
@@ -32,7 +32,7 @@ body {
 }
 .thirdmini-2 {
 	display: flex;
-	height: 100%;
+	height: 60%;
 	width: 70%;
 }
 .thirdmini-3 {
@@ -129,23 +129,6 @@ body {
 .grow:hover{
 	transform: scale(1.2);
 }
-p {
-	font-family: fantasy;
-	font-size: 50px;
-	text-align: center;
-	color: black;
-}
-p2 {
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 15px;
-	text-align: center;
-}
-p3 {
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 15px;
-	text-align: center;
-	color: white;
-}
 .first { 
 height: 100%;
 width:25%;
@@ -216,12 +199,13 @@ ul {
 }
 
 li {
-	color: #fff;
-  background: #6601C6;
-	display: block;
-	float: left;
-	position: relative;
-	text-decoration: none;
+  color: #fff;
+  background: #4B0082;
+  display: block;
+  float: left;
+  position: relative;
+  text-decoration: none;
+  transition-duration: 0.5s;
   transition-duration: 0.5s;
   width: 25%;
   height: 100%;
@@ -237,7 +221,7 @@ li:hover {
 }
 
 ul li ul {
-	background: #6601C6;
+	background: #4B0082;
 	visibility: hidden;
   opacity: 0;
   min-width: 5rem;
@@ -268,4 +252,24 @@ ul li ul li {
 	height: 100%;
 	width: 80%;
 	background-color: black;
+}
+li a {
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+}
 
+h1{
+	font-family:  Impact, Charcoal, sans-serif;
+	font-size: 60px;
+}
+p3{
+font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+font-size: 15px;
+ color: #fff;
+}
+p2{
+font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+font-size: 13px;
+}
